# mem-kernel-rs

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  OPEN_SOURCE_CHECKLIST.md  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/mem-api/: Cargo.toml
crates/mem-api/src/: lib.rs  main.rs  server.rs
crates/mem-api/tests/: integration.rs
crates/mem-cube/: Cargo.toml
crates/mem-cube/src/: entity_cube.rs  lib.rs  naive.rs
crates/mem-embed/: Cargo.toml
crates/mem-embed/src/: entity_extractor.rs  lib.rs  llm.rs  mock.rs  openai.rs  openai_entity_extractor.rs  reranker.rs
crates/mem-graph/: Cargo.toml
crates/mem-graph/src/: entity_knowledge_graph.rs  lib.rs  memory.rs  sqlite.rs  store.rs
crates/mem-scheduler/: Cargo.toml
crates/mem-scheduler/src/: memory.rs  trait_.rs
crates/mem-types/: Cargo.toml
crates/mem-types/src/: dto.rs  entity.rs  lib.rs  lifecycle.rs  traits.rs
crates/mem-vec/: Cargo.toml
crates/mem-vec/src/: keyword_store.rs  lib.rs  memory_vec.rs  qdrant_store.rs  sqlite_vec.rs  store.rs
deployments/compose/: Dockerfile.api  docker-compose.yml
deployments/compose/embed-mock/: Dockerfile  server.py
deployments/compose/scripts/: smoke.sh
docs/: README.md  api-reference.md  architecture.md  configuration.md  development.md  quickstart.md  roadmap-1.0.md  troubleshooting.md
