[package]
name = "mem-api"
version = "0.1.0"
edition = "2021"
description = "REST API (Axum) for MemOS: /product/add, /product/search"

[[bin]]
name = "mem-api"
path = "src/main.rs"

[dependencies]
mem-types = { path = "../mem-types" }
mem-cube = { path = "../mem-cube" }
mem-graph = { path = "../mem-graph" }
mem-vec = { path = "../mem-vec" }
mem-embed = { path = "../mem-embed" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
