[package]
name = "mem-api"
version = "0.1.0"
edition = "2021"
description = "REST API (Axum) for MemOS: /product/add, /product/search"

[[bin]]
name = "mem-api"
path = "src/main.rs"

[dependencies]
mem-types = { path = "../mem-types" }
mem-cube = { path = "../mem-cube" }
mem-graph = { path = "../mem-graph" }
mem-vec = { path = "../mem-vec", features = ["qdrant"] }
mem-embed = { path = "../mem-embed" }
mem-scheduler = { path = "../mem-scheduler" }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mem-embed = { path = "../mem-embed", features = ["test-util"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
