[package]
name = "mem-cube"
version = "0.1.0"
edition = "2021"
description = "MemCube orchestration: add/search combining graph, vector, embedder"
license = "Apache-2.0"

[dependencies]
mem-types = { path = "../mem-types" }
mem-graph = { path = "../mem-graph" }
mem-vec = { path = "../mem-vec" }
mem-embed = { path = "../mem-embed" }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
chrono = "0.4"
