[package]
name = "mem-embed"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible embedding client for MemOS"
license = "Apache-2.0"

[features]
test-util = []

[dependencies]
mem-types = { path = "../mem-types" }
async-trait = "0.1"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
