[package]
name = "mem-graph"
version = "0.1.0"
edition = "2021"
description = "Graph store trait and in-memory implementation for MemOS"

[dependencies]
mem-types = { path = "../mem-types" }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
