[package]
name = "mem-graph"
version = "0.1.0"
edition = "2021"
description = "Graph store trait and in-memory implementation for MemOS"
license = "Apache-2.0"

[features]
default = []
sqlite = ["rusqlite"]

[dependencies]
mem-types = { path = "../mem-types", version = "0.1.0" }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

rusqlite = { version = "0.31", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
