[package]
name = "mem-types"
version = "0.1.0"
edition = "2021"
description = "Core types, DTOs, and MemCube traits for MemOS-compatible memory API"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
