[package]
name = "mem-vec"
version = "0.1.0"
edition = "2021"
description = "Vector store trait and Qdrant implementation for MemOS"
license = "Apache-2.0"

[features]
default = []
qdrant = ["qdrant-client"]

[dependencies]
mem-types = { path = "../mem-types" }
async-trait = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
qdrant-client = { version = "1.9", optional = true }
